loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:6: error: ';' expected but 'else' found.
  else () {
  ^